lb frontend update

--- a/loadbalancer/web/404.html
+++ b/loadbalancer/web/404.html
@@ -24,7 +24,7 @@
             </li>
             
             <li class="nav-item">
-              <a class="nav-link" href="https://www.netifidash.io:50000">Try NetiFiDash For Yourself</a>
+              <a class="nav-link" href="http://app.netifidash.io:20000">Try NetiFiDash For Yourself</a>
             </li>
 
             <li class="nav-item">
@@ -48,7 +48,7 @@
           <br>
           <br>
 
-          <a class="btn btn-primary" href="https://www.netifidash.io/app/">Try NetiFiDash For Yourself</a>
+          <a class="btn btn-primary" href="http://app.netifidash.io:20000">Try NetiFiDash For Yourself</a>
 
           <br>
           <br>
