--- a/loadbalancer/web/index.html
+++ b/loadbalancer/web/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>NetiFiDash 404 Page</title>
+    <title>NetiFiDash Home Page</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,7 +24,7 @@
             </li>
             
             <li class="nav-item">
-              <a class="nav-link" href="https://www.netifidash.io/app/">Try NetiFiDash For Yourself</a>
+              <a class="nav-link" href="http://app.netifidash.io:20000">Try NetiFiDash For Yourself</a>
             </li>
 
             <li class="nav-item">
