--- a/loadbalancer/web/index.html
+++ b/loadbalancer/web/index.html
@@ -24,7 +24,7 @@
             </li>
             
             <li class="nav-item">
-              <a class="nav-link" href="http://app.netifidash.io:20000">Try NetiFiDash For Yourself</a>
+              <a class="nav-link" href="http://netifidash.io/app/">Try NetiFiDash For Yourself</a>
             </li>
 
             <li class="nav-item">
